--- a/about.html
+++ b/about.html
@@ -1,268 +1,309 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 
- <html>
+<html>
+<head>
+  <meta content="width=device-width, initial-scale=1, maximum-scale=1" name="viewport">
+  <meta charset="utf-8"><!-- Description, Keywords and Author -->
+  <meta content="" name="description">
+  <meta content="" name="author">
 
-    <head>
+  <title>:: AV Design website | About ::</title>
+  <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon"><!-- style -->
+  <link href="css/style.css" rel="stylesheet" type="text/css"><!-- style -->
+  <!-- bootstrap -->
+  <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css"><!-- responsive -->
+  <link href="css/responsive.css" rel="stylesheet" type="text/css"><!-- font-awesome -->
+  <link href="css/fonts.css" rel="stylesheet" type="text/css">
+  <link href="css/font-awesome.min.css" rel="stylesheet" type="text/css"><!-- font-awesome -->
+</head>
 
-    	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+<body>
+  <!-- header -->
 
-        <meta charset="utf-8">
 
-        <!-- Description, Keywords and Author -->
+  <header role="header">
+    <div class="container">
+      <!-- logo -->
 
-        <meta name="description" content="">
 
-        <meta name="author" content="">
+      <h1><a href="index.html" title="AV Design logo"><img alt="AV Design logo" src="images/logo.png"></a>
+      </h1>
+      <!-- logo -->
+      <!-- nav -->
 
 
+      <nav class="navy" role="header-nav">
+        <ul>
+          <li><a href="index.html" title="Portfolio">Portfolio</a>
+          </li>
 
-        <title>:: AV Design website | About ::</title>
 
-		<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+          <li class="nav-active"><a href="about.html" title="About">About</a>
+          </li>
 
 
+          <li><a href="contact.html" title="Contact">Contact</a>
+          </li>
+        </ul>
+      </nav>
+      <!-- nav -->
+    </div>
+  </header>
+  <!-- header -->
+  <!-- main -->
 
-        <!-- style -->
 
-        <link href="css/style.css" rel="stylesheet" type="text/css">
+  <main class="container" role="main-inner-wrapper">
+    <section class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+      <article role="pge-title-content">
+        <header>
+          <h2><span>About</span>
+          </h2>
 
-        <!-- style -->
 
-        <!-- bootstrap -->
+          <p>Alina is a web and graphic designer with more than five years experience. She possesses a certificate in HTML5, CSS3 and Responsive Design for Web Development and obtained a B.A. in Visual Communications.</p>
 
-        <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
 
-        <!-- responsive -->
+          <p>In addition, Alina had the opportunity to learn product photography, photo editing and illustration, so she is capable of creating any unique visual the client needs.</p>
 
-        <link href="css/responsive.css" rel="stylesheet" type="text/css">
 
-        <!-- font-awesome -->
+          <p>Alina is an expert in translating client's needs into effective and eye catching design.</p>
+        </header>
+        <!-- <img src="images\about-images\about-image-1.jpg" alt="" class="img-responsive"/ -->
+      </article>
+    </section>
 
-        <link href="css/fonts.css" rel="stylesheet" type="text/css">
 
-        <link href="css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <section class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+      <article class="about-content">
+        <img alt="Alina's portrait" class="img-responsive" src="images/about-images/about-image-1.jpg">
+      </article>
+    </section>
 
-        <!-- font-awesome -->
 
+    <section class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+      <div class="grey">
+        <h2 class="h-center"><span>Years of experience:</span>
+        </h2>
 
 
-	</head>
-
-
-
-    <body>
-
-
-
-    	<!-- header -->
-
-        	<header role="header">
-
-            	<div class="container">
-
-                	<!-- logo -->
-
-                    	<h1>
-
-                        <a href="index.html" title="AV Design logo"><img src="images/logo.png" alt="AV Design logo"/></a>
-
-                        </h1>
-
-                    <!-- logo -->
-
-                    <!-- nav -->
-
-                    <nav role="header-nav" class="navy">
-
-                        <ul>
-
-                            <li><a href="index.html" title="Portfolio">Portfolio</a></li>
-
-                            <li class="nav-active"><a href="about.html" title="About">About</a></li>
-
-                            <li><a href="contact.html" title="Contact">Contact</a></li>
-
-                        </ul>
-
-                    </nav>
-
-                    <!-- nav -->
-
-                </div>
-
-            </header>
-
-        <!-- header -->
-
-        <!-- main -->
-
-        <main role="main-inner-wrapper" class="container">
-
-
-
-
-
-
-            	<section class="col-xs-12 col-sm-6 col-md-6 col-lg-6 ">
-
-                	<article role="pge-title-content">
-
-                    	<header>
-
-                         <h2><span>About</span></h2>
-                         <p>Alina is a web and graphic designer with more than five years experience.
-                           She possesses a certificate in HTML5, CSS3 and Responsive Design for Web Development and
-   obtained a B.A. in Visual Communications. </p>
-   <p>In addition, Alina had the opportunity to learn product photography,
-   photo editing and illustration, so she is capable of creating any unique visual the client needs.
-    </p>
-   <p>Alina is an expert in translating
-   clients needs into effective and eye catching design.
-                           </p>
-                        </header>
-                        <!-- <img src="images\about-images\about-image-1.jpg" alt="" class="img-responsive"/ -->
-
-                   </article>
-                </section>
-
-
-
-                <section class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-
-                	<article class="about-content">
-
-
-                      <img src="images\about-images\about-image-1.jpg" alt="Alina's portrait" class="img-responsive">
-
-                    </article>
-
-                </section>
-  <section class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-    <div class="grey">
-              <h2 class="h-center"><span>Years of experience:</span></h2>
-                <div class="wrapper-5"> <img src="images\about-images\5-years.png" alt="five years"></div></div>
-
-                <div class="grey">
-            <h2 class="h-center"><span>Education:</span></h2>
-            <div class="flex-container">
-              <div>Certificate in HTML5, CSS3 and Responsive Design</div>
-          </div>
-          <div class="flex-container">
-            <div>B.A. in Visual Communications</div>
+        <div class="wrapper-5"><img alt="five years" src="images/about-images/5-years.png">
         </div>
       </div>
+
 
       <div class="grey">
-              <h2 class="h-center"><span>Skills:</span></h2>
-              <div class="flex-container">
-                <div>HTML5</div>
-                <div>CSS3</div>
-                <div>SASS</div>
-                <div>UI</div>
-                <div>UX</div>
-                <div>Graphic Design</div>
-                <div>Digital Photography</div>
-                <div>Photo Editing</div>
-                <div>Illustration</div>
-            </div>
-</div>
+        <h2 class="h-center"><span>Education:</span>
+        </h2>
 
-<div class="grey">
-            <h2 class="h-center"><span>Software:</span></h2>
-            <div class="wrapper">
-              <div> <img src="images\about-images\slack.png" alt="slack" class="logos"></div>
 
-              <div> <img src="images\about-images\github.png" alt="github" class="logos"></div>
-              <div> <img src="images\about-images\git.png" alt="git" class="logos"></div>
-              <div> <img src="images\about-images\photoshop.png" alt="photoshop" class="logos"></div>
-              <div> <img src="images\about-images\illustrator.png" alt="illustrator" class="logos"></div>
-              <div> <img src="images\about-images\indesign.png" alt="indesign" class="logos"></div>
-              <div> <img src="images\about-images\lightroom.png" alt="lightroom" class="logos"></div>
-              <div> <img src="images\about-images\brackets.png" alt="brackets" class="logos"></div>
+        <div class="flex-container">
+          <div>
+            Certificate in HTML5, CSS3 and Responsive Design
+          </div>
+        </div>
 
-              <div> <img src="images\about-images\slack.png" alt="slack" class="logos"></div>
 
-              <div> <img src="images\about-images\asana.png" alt="asana" class="logos"></div>
-
-          <div> <img src="images\about-images\atom.png" alt="atom" class="logos"></div>
-        <div> <img src="images\about-images\magento.png" alt="magento" class="logos"></div>
-        <div> <img src="images\about-images\koala.png" alt="koala" class="logos"></div>
-        <div> <img src="images\about-images\basecamp.png" alt="basecamp" class="logos" ></div>
-        <div> <img src="images\about-images\dropbox.png" alt="dropbox" class="logos"></div>
-    </div>
-  </div>
-
-  <div class="grey">
-          <h2 class="h-center"><span>Clients:</span></h2>
-          <div class="wrapper">
-            <div> <img src="images\about-images\fxr.png" alt="fxr" class="logos"></div>
-            <div> <img src="images\about-images\printiton.png" alt="printiton" class="logos"></div>
-            <div> <img src="images\about-images\nygard.png" alt="nygard" class="logos"></div>
-            <div> <img src="images\about-images\harel.png" alt="harel" class="logos"></div>
+        <div class="flex-container">
+          <div>
+            B.A. in Visual Communications
+          </div>
         </div>
       </div>
-            </section>
-        </main>
-
-    	<!-- main  -->
-
-      <!-- footer -->
-
-      <footer role="footer">
-
-          <!-- logo -->
-
-              <h1>
-
-                <a href="index.html" title="AV Design logo"><img src="images/logo.png" alt="AV Design logo"/></a>
-
-              </h1>
-
-          <!-- logo -->
-
-          <!-- nav -->
-
-          <nav role="footer-nav">
-
-            <ul>
-
-                <li><a href="index.html" title="Portfolio">Portfolio</a></li>
-
-                  <li><a class="nav-active" href="about.html" title="About">About</a></li>
-
-                  <li><a href="contact.html" title="Contact">Contact</a></li>
-
-              </ul>
-
-          </nav>
-
-          <!-- nav -->
-
-          <p class="copy-right">&copy; 2018 AV Design website All rights Reserved</p>
-
-      </footer>
-
-      <!-- footer -->
 
 
-        <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+      <div class="grey">
+        <h2 class="h-center"><span>Skills:</span>
+        </h2>
 
-        <script src="js/jquery.min.js" type="text/javascript"></script>
 
-        <!-- custom -->
+        <div class="flex-container">
+          <div>
+            HTML5
+          </div>
 
-		<script src="js/nav.js" type="text/javascript"></script>
 
-        <script src="js/custom.js" type="text/javascript"></script>
+          <div>
+            CSS3
+          </div>
 
-        <!-- Include all compiled plugins (below), or include individual files as needed -->
 
-        <script src="js/bootstrap.min.js" type="text/javascript"></script>
+          <div>
+            SASS
+          </div>
 
-        <!-- jquery.countdown -->
 
-        <script src="js/html5shiv.js" type="text/javascript"></script>
+          <div>
+            UI
+          </div>
 
-    </body>
 
+          <div>
+            UX
+          </div>
+
+
+          <div>
+            Graphic Design
+          </div>
+
+
+          <div>
+            Digital Photography
+          </div>
+
+
+          <div>
+            Photo Editing
+          </div>
+
+
+          <div>
+            Illustration
+          </div>
+        </div>
+      </div>
+
+
+      <div class="grey">
+        <h2 class="h-center"><span>Software:</span>
+        </h2>
+
+
+        <div class="wrapper">
+          <div><img alt="slack" class="logos" src="images/about-images/slack.png" title="Slack">
+          </div>
+
+
+          <div><img alt="github" class="logos" src="images/about-images/github.png" title="Github">
+          </div>
+
+
+          <div><img alt="git" class="logos" src="images/about-images/git.png" title="Git">
+          </div>
+
+
+          <div><img alt="photoshop" class="logos" src="images/about-images/photoshop.png" title="Photoshop">
+          </div>
+
+
+          <div><img alt="illustrator" class="logos" src="images/about-images/illustrator.png" title="Illustrator">
+          </div>
+
+
+          <div><img alt="indesign" class="logos" src="images/about-images/indesign.png" title="Indesign">
+          </div>
+
+
+          <div><img alt="lightroom" class="logos" src="images/about-images/lightroom.png" title="Lightroom">
+          </div>
+
+
+          <div><img alt="brackets" class="logos" src="images/about-images/brackets.png" title="Brackets">
+          </div>
+
+
+          <div><img alt="asana" class="logos" src="images/about-images/asana.png" title="Asana">
+          </div>
+
+
+          <div><img alt="atom" class="logos" src="images/about-images/atom.png" title="Atom">
+          </div>
+
+
+          <div><img alt="magento" class="logos" src="images/about-images/magento.png" title="Magento">
+          </div>
+
+
+          <div><img alt="koala" class="logos" src="images/about-images/koala.png" title="Koala">
+          </div>
+
+
+          <div><img alt="basecamp" class="logos" src="images/about-images/basecamp.png" title="Basecamp">
+          </div>
+
+
+          <div><img alt="dropbox" class="logos" src="images/about-images/dropbox.png" title="Dropbox">
+          </div>
+        </div>
+      </div>
+
+
+      <div class="grey">
+        <h2 class="h-center"><span>Clients:</span>
+        </h2>
+
+
+        <div class="wrapper">
+          <div>
+            <a href="https://www.fxrracing.com/"><img alt="fxr" class="logos" src="images/about-images/fxr.png"></a>
+          </div>
+
+
+          <div>
+            <a href="https://www.printiton.ca/"><img alt="printiton" class="logos" src="images/about-images/printiton.png"></a>
+          </div>
+
+
+          <div>
+            <a href="https://www.nygard.com/en-ca"><img alt="nygard" class="logos" src="images/about-images/nygard.png"></a>
+          </div>
+
+
+          <div>
+            <a href="https://www.harel-group.co.il/"><img alt="harel" class="logos" src="images/about-images/harel.png"></a>
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
+  <!-- main  -->
+  <!-- footer -->
+
+
+  <footer role="footer">
+    <!-- logo -->
+
+
+    <h1><a href="index.html" title="AV Design logo"><img alt="AV Design logo" src="images/logo.png"></a>
+    </h1>
+    <!-- logo -->
+    <!-- nav -->
+
+
+    <nav role="footer-nav">
+      <ul>
+        <li><a href="index.html" title="Portfolio">Portfolio</a>
+        </li>
+
+
+        <li><a class="nav-active" href="about.html" title="About">About</a>
+        </li>
+
+
+        <li><a href="contact.html" title="Contact">Contact</a>
+        </li>
+      </ul>
+    </nav>
+    <!-- nav -->
+
+
+    <p class="copy-right">&copy; 2019 AV Design website. All rights Reserved</p>
+  </footer>
+  <!-- footer -->
+  <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+  <script src="js/jquery.min.js" type="text/javascript">
+  </script> <!-- custom -->
+
+  <script src="js/nav.js" type="text/javascript">
+  </script>
+  <script src="js/custom.js" type="text/javascript">
+  </script> <!-- Include all compiled plugins (below), or include individual files as needed -->
+
+  <script src="js/bootstrap.min.js" type="text/javascript">
+  </script> <!-- jquery.countdown -->
+
+  <script src="js/html5shiv.js" type="text/javascript">
+  </script>
+</body>
 </html>
