--- a/contact.html
+++ b/contact.html
@@ -1,259 +1,172 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 
- <html>
+<html>
+<head>
+  <meta content="width=device-width, initial-scale=1, maximum-scale=1" name="viewport">
+  <meta charset="utf-8"><!-- Description, Keywords and Author -->
+  <meta content=" AV Design Website" name="description">
+  <meta content="Alina" name="author">
 
-    <head>
+  <title>:: AV Design | Contact ::</title>
+  <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon"><!-- style -->
+  <link href="css/style.css" rel="stylesheet" type="text/css"><!-- style -->
+  <!-- bootstrap -->
+  <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css"><!-- responsive -->
+  <link href="css/responsive.css" rel="stylesheet" type="text/css"><!-- font-awesome -->
+  <link href="css/fonts.css" rel="stylesheet" type="text/css">
+  <link href="css/font-awesome.min.css" rel="stylesheet" type="text/css"><!-- font-awesome -->
+  <link href="css/set2.css" rel="stylesheet" type="text/css">
+  <link href="css/normalize.css" rel="stylesheet" type="text/css">
+</head>
 
-    	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+<body>
+  <!-- header -->
 
-        <meta charset="utf-8">
 
-        <!-- Description, Keywords and Author -->
+  <header role="header">
+    <div class="container">
+      <!-- logo -->
 
-        <meta name="description" content=" AV Design Website">
 
-        <meta name="author" content="Alina">
+      <h1><a href="index.html" title="AV Design logo"><img alt="AV Design logo" src="images/logo.png"></a>
+      </h1>
+      <!-- logo -->
+      <!-- nav -->
 
 
+      <nav class="navy" role="header-nav">
+        <ul>
+          <li><a href="index.html" title="Portfolio">Portfolio</a>
+          </li>
 
-        <title>:: AV Design | Contact ::</title>
 
-		<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+          <li><a href="about.html" title="About">About</a>
+          </li>
 
 
+          <li class="nav-active"><a href="contact.html" title="Contact">Contact</a>
+          </li>
+        </ul>
+      </nav>
+      <!-- nav -->
+    </div>
+  </header>
+  <!-- header -->
+  <!-- main -->
 
-        <!-- style -->
 
-        <link href="css/style.css" rel="stylesheet" type="text/css">
+  <main class="container" role="main-inner-wrapper">
+    <div class="row">
+      <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
+        <article class="contact-header" role="pge-title-content">
+          <header>
+            <h2><span>Contact</span>
+            </h2>
+          </header>
+        </article>
+      </div>
 
-        <!-- style -->
 
-        <!-- bootstrap -->
+      <div class="clearfix">
+        <span></span>
+      </div>
+      <!-- contat-from-wrapper -->
 
-        <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
 
-        <!-- responsive -->
+      <div class="contat-from-wrapper">
+        <span></span>
 
-        <link href="css/responsive.css" rel="stylesheet" type="text/css">
+        <div id="message">
+          <span></span>
+        </div>
 
-        <!-- font-awesome -->
 
-        <link href="css/fonts.css" rel="stylesheet" type="text/css">
+        <form action="php/contactfrom.php" id="cform" method="post" name="cform">
+          <span></span>
 
-        <link href="css/font-awesome.min.css" rel="stylesheet" type="text/css">
+          <div class="row">
+            <span></span>
 
-        <!-- font-awesome -->
-
-        <link href="css/set2.css" rel="stylesheet" type="text/css">
-
-        <link href="css/normalize.css" rel="stylesheet" type="text/css">
-
-	</head>
-
-
-
-    <body>
-
-
-
-    	<!-- header -->
-
-        	<header role="header">
-
-            	<div class="container">
-
-                	<!-- logo -->
-
-                    	<h1>
-
-                        <a href="index.html" title="AV Design logo"><img src="images/logo.png" alt="AV Design logo"/></a>
-
-                        </h1>
-
-                    <!-- logo -->
-
-                    <!-- nav -->
-
-                    <nav role="header-nav" class="navy">
-
-                        <ul>
-
-                            <li><a href="index.html" title="Portfolio">Portfolio</a></li>
-
-                            <li><a href="about.html" title="About">About</a></li>
-
-                            <li class="nav-active"><a href="contact.html" title="Contact">Contact</a></li>
-
-                        </ul>
-
-                    </nav>
-
-                    <!-- nav -->
-
-                </div>
-
-            </header>
-
-        <!-- header -->
-
-        <!-- main -->
-
-        <main role="main-inner-wrapper" class="container">
-
-
-
-            <div class="row">
-
-
-
-            	<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 ">
-
-                	<article role="pge-title-content" class="contact-header">
-
-                    	<header>
-
-                        	<h2><span>Contact</h2>
-
-                        </header>
-
-                    </article>
-
-                </div>
-
-
-
-                <div class="clearfix"></div>
-
-
-
-               <!-- contat-from-wrapper -->
-
-               <div class="contat-from-wrapper">
-
-               		  <div id="message"></div>
-
-                                <form method="post" action="php/contactfrom.php" name="cform" id="cform">
-
-                            <div class="row">
-
-                                <div class="col-md-6 col-lg-6 col-sm-6 col-xs-12">
-
-                                <input  name="name" id="name" type="text" placeholder="Whats your name">
-
-                                </div>
-
-                                <div class="col-md-6 col-lg-6 col-sm-6 col-xs-12">
-
-                                <input  name="email" id="email" type="email"  placeholder="Whats your email">
-
-                                </div>
-
-                            </div>
-
-                            <div class="clearfix"></div>
-
-                            <textarea name="comments" id="comments" cols="" rows="" placeholder="Whats in your mind"></textarea>
-
-                            <div class="clearfix"></div>
-
-                            <input name="" type="submit" value="Send email">
-
-                            <div id="simple-msg"></div>
-
-                        </form>
-
-               </div>
-
-               <!-- contat-from-wrapper -->
-
-
-
-
-
+            <div class="col-md-6 col-lg-6 col-sm-6 col-xs-12">
+              <span><input id="name" name="name" placeholder="Your name:" type="text"></span>
             </div>
+            <span></span>
 
-        </main>
-
-    	<!-- main -->
-
-        <!-- footer -->
-
-        <footer role="footer">
-
-            <!-- logo -->
-
-                <h1>
-
-                  <a href="index.html" title="AV Design logo"><img src="images/logo.png" alt="AV Design logo"/></a>
-
-                </h1>
-
-            <!-- logo -->
-
-            <!-- nav -->
-
-            <nav role="footer-nav">
-
-            	<ul>
-
-                	<li><a href="index.html" title="Portfolio">Portfolio</a></li>
-
-                    <li><a href="about.html" title="About">About</a></li>
-
-                    <li class="nav-active"><a href="contact.html" title="Contact">Contact</a></li>
-
-                </ul>
-
-            </nav>
-
-            <!-- nav -->
-
-            <ul role="social-icons">
-
-            	<li><a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a></li>
-
-                <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
-
-                <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
-
-                <li><a href="#"><i class="fa fa-flickr" aria-hidden="true"></i></a></li>
-
-            </ul>
-
-            <p class="copy-right">&copy; 2015  avana LLC.. All rights Resved</p>
-
-        </footer>
-
-        <!-- footer -->
+            <div class="col-md-6 col-lg-6 col-sm-6 col-xs-12">
+              <span><input id="email" name="email" placeholder="Email:" type="email"></span>
+            </div>
+            <span></span>
+          </div>
 
 
+          <div class="clearfix">
+            <span></span>
+          </div>
+          <span>
+          <textarea cols="" id="comments" name="comments" placeholder="Messege:" rows=""></textarea></span>
 
-        <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+          <div class="clearfix">
+            <span></span>
+          </div>
+          <span><input name="" type="submit" value="Send email"></span>
 
-        <script src="js/jquery.min.js" type="text/javascript"></script>
+          <div id="simple-msg">
+            <span></span>
+          </div>
+        </form>
+      </div>
+      <!-- contat-from-wrapper -->
+    </div>
+  </main>
+  <!-- main -->
+  <!-- footer -->
 
-        <!-- custom -->
+
+  <footer role="footer">
+    <span><!-- nav --></span>
+
+    <nav role="footer-nav">
+      <span></span>
+
+      <ul>
+        <li><span><a href="index.html" title="Portfolio">Portfolio</a></span>
+        </li>
 
 
+        <li><span><a href="about.html" title="About">About</a></span>
+        </li>
 
-        <script src="js/custom.js" type="text/javascript"></script>
 
-		<script src="js/jquery.contact.js" type="text/javascript"></script>
+        <li class="nav-active"><span><a href="contact.html" title="Contact">Contact</a></span>
+        </li>
+      </ul>
+    </nav>
 
-        <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false"></script>
 
-		<script src="js/maps.js" type="text/javascript"></script>
+    <p class="copy-right"><span>&copy; 2019 AV Design website. All rights Reserved</span>
+    </p>
+  </footer>
+  <!-- footer -->
+  <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+  <span>
+  <script src="js/jquery.min.js" type="text/javascript">
+  </script> <!-- custom -->
 
-        <script src="js/nav.js" type="text/javascript"></script>
+  <script src="js/custom.js" type="text/javascript">
+  </script>
+  <script src="js/jquery.contact.js" type="text/javascript">
+  </script>
+  <script src="https://maps.googleapis.com/maps/api/js?v=3.exp&sensor=false">
+  </script>
+  <script src="js/maps.js" type="text/javascript">
+  </script>
+  <script src="js/nav.js" type="text/javascript">
+  </script> <!-- Include all compiled plugins (below), or include individual files as needed -->
 
-        <!-- Include all compiled plugins (below), or include individual files as needed -->
+  <script src="js/bootstrap.min.js" type="text/javascript">
+  </script> <!-- jquery.countdown -->
 
-        <script src="js/bootstrap.min.js" type="text/javascript"></script>
-
-        <!-- jquery.countdown -->
-
-        <script src="js/html5shiv.js" type="text/javascript"></script>
-
-    </body>
-
+  <script src="js/html5shiv.js" type="text/javascript">
+  </script></span>
+</body>
 </html>
