--- a/illustrations.html
+++ b/illustrations.html
@@ -1,247 +1,150 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
+
+<html>
+<head>
+  <meta content="width=device-width, initial-scale=1, maximum-scale=1" name="viewport">
+  <meta charset="utf-8"><!-- Description, Keywords and Author -->
+  <meta content="" name="description">
+  <meta content="" name="author">
+
+  <title>::AV Design website:: | Illustration ::</title>
+  <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon"><!-- style -->
+  <link href="css/style.css" rel="stylesheet" type="text/css"><!-- style -->
+  <!-- bootstrap -->
+  <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css"><!-- responsive -->
+  <link href="css/responsive.css" rel="stylesheet" type="text/css"><!-- font-awesome -->
+  <link href="css/fonts.css" rel="stylesheet" type="text/css">
+  <link href="css/font-awesome.min.css" rel="stylesheet" type="text/css"><!-- font-awesome -->
+  <link href="css/effects/set2.css" rel="stylesheet" type="text/css">
+  <link href="css/effects/normalize.css" rel="stylesheet" type="text/css">
+  <link href="css/effects/component.css" rel="stylesheet" type="text/css">
+</head>
 
- <html>
+<body>
+  <!-- header -->
 
-    <head>
 
-    	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+  <header role="header">
+    <div class="container">
+      <!-- logo -->
 
-        <meta charset="utf-8">
 
-        <!-- Description, Keywords and Author -->
+      <h1><a href="index.html" title="AV Design logo"><img alt="AV Design logo" src="images/logo.png"></a>
+      </h1>
+      <!-- logo -->
+      <!-- nav -->
 
-        <meta name="description" content="">
 
-        <meta name="author" content="">
-
-
-
-        <title>::AV Design website:: | Illustration ::</title>
-
-		<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
-
-
-
-        <!-- style -->
-
-        <link href="css/style.css" rel="stylesheet" type="text/css">
-
-        <!-- style -->
-
-        <!-- bootstrap -->
-
-        <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
-
-        <!-- responsive -->
-
-        <link href="css/responsive.css" rel="stylesheet" type="text/css">
-
-        <!-- font-awesome -->
-
-        <link href="css/fonts.css" rel="stylesheet" type="text/css">
-
-        <link href="css/font-awesome.min.css" rel="stylesheet" type="text/css">
-
-        <!-- font-awesome -->
-
-        <link href="css/effects/set2.css" rel="stylesheet" type="text/css">
-
-        <link href="css/effects/normalize.css" rel="stylesheet" type="text/css">
-
-        <link href="css/effects/component.css"  rel="stylesheet" type="text/css" >
-
-	</head>
-
-
-
-    <body>
-
-
-
-    	<!-- header -->
-
-        	<header role="header">
-
-            	<div class="container">
-
-                	<!-- logo -->
-
-                    	<h1>
-
-                        <a href="index.html" title="AV Design logo"><img src="images/logo.png" alt="AV Design logo"/></a>
-
-                        </h1>
-
-                    <!-- logo -->
-
-                    <!-- nav -->
-
-                    <nav role="header-nav" class="navy">
-
-                        <ul>
-
-                            <li class="nav-active"><a href="index.html" title="Portfilio">Portfolio</a></li>
-
-                            <li><a href="about.html" title="About">About</a></li>
-
-                            <li><a href="contact.html" title="Contact">Contact</a></li>
-
-                        </ul>
-
-                    </nav>
-
-                    <!-- nav -->
-
-                </div>
-
-            </header>
-
-        <!-- header -->
-
-        <!-- main -->
-
-        <main role="main-inner-wrapper" class="container">
-
-                <!-- work details -->
-                <img src="images\illustration-images\image-4.jpg" alt="" class="img-responsive"/></li>
-
-
-                	<div class="work-details">
-
-
-
-                        <div class="row">
-
-                        	<div class="col-xs-12 col-sm-12 col-md-4">
-
-                            	<header role="work-title">
-
-                                	<h2>Digital Illustration</h2>
-
-                                </header>
-
-                            </div>
-
-                            <div class="col-xs-12 col-sm-12 col-md-8">
-
-                            	<section>
-
-                                	<p>Some clients need a unique visualization of their massage.
-                                  It is true that the internet offers almost endless amount of different illustrations for sale and download online, however,
-                                sometimes none of them is what the client is looking for. It could be a special colour palette of an icon that lines with the client's brand
-                              identity or an illustration that visualizes client's message in the most effective way.
-                              Below are some samples of   brochures, book cover, labels and wedding invitation where I had an
-                              opportunity to create original illustrations.  </p>
-
-                                    <p><strong>Role</strong><br/>
-
-									Digital Illustration, Branding, Identity, Web Design</p>
-
-                                </section>
-
-                            </div>
-
-                        </div>
-                        <img src="images\illustration-images\image-2.jpg" alt="" class="img-responsive">
-                        <img src="images\illustration-images\image-3.jpg" alt="" class="img-responsive">
-                        <img src="images\illustration-images\image-6.jpg" alt="" class="img-responsive">
-                        <img src="images\illustration-images\image-5.jpg" alt="" class="img-responsive">
-
-<img src="images\illustration-images\image-7.jpg" alt="" class="img-responsive">
-                              <img src="images\illustration-images\image-1.jpg" alt="" class="img-responsive">
-
-
-
-
-
-
-
-
-
-                        </div>
-
-
-
-                    </div>
-
-                <!-- work details -->
-
-
-
-
-
-        </main>
-
-    	<!-- main -->
-
-        <!-- footer -->
-
-        <footer role="footer">
-
-            <!-- logo -->
-
-                <h1>
-
-                  <a href="index.html" title="AV Design logo"><img src="images/logo.png" alt="AV Design logo"/></a>
-
-                </h1>
-
-            <!-- logo -->
-
-            <!-- nav -->
-
-            <nav role="footer-nav">
-
-            	<ul>
-
-                	<li><a href="index.html" title="Portfolio">Portfolio</a></li>
-
-                    <li><a href="about.html" title="About">About</a></li>
-
-                    <li><a href="contact.html" title="Contact">Contact</a></li>
-
-                </ul>
-
-            </nav>
-
-            <!-- nav -->
-
-            <p class="copy-right">&copy; 2018 AV Design website All rights Reserved</p>
-
-        </footer>
-
-        <!-- footer -->
-
-
-
-        <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-
-        <script src="js/jquery.min.js" type="text/javascript"></script>
-
-        <!-- custom -->
-
-		<script src="js/nav.js" type="text/javascript"></script>
-
-        <script src="js/custom.js" type="text/javascript"></script>
-
-        <!-- Include all compiled plugins (below), or include individual files as needed -->
-
-        <script src="js/bootstrap.min.js" type="text/javascript"></script>
-
-        <script src="js/effects/masonry.pkgd.min.js"  type="text/javascript"></script>
-
-		<script src="js/effects/imagesloaded.js"  type="text/javascript"></script>
-
-		<script src="js/effects/classie.js"  type="text/javascript"></script>
-
-		<script src="js/effects/AnimOnScroll.js"  type="text/javascript"></script>
-
-        <script src="js/effects/modernizr.custom.js"></script>
-
-        <!-- jquery.countdown -->
-
-        <script src="js/html5shiv.js" type="text/javascript"></script>
-
-    </body>
-
+      <nav class="navy" role="header-nav">
+        <ul>
+          <li class="nav-active"><a href="index.html" title="Portfilio">Portfolio</a>
+          </li>
+
+
+          <li><a href="about.html" title="About">About</a>
+          </li>
+
+
+          <li><a href="contact.html" title="Contact">Contact</a>
+          </li>
+        </ul>
+      </nav>
+      <!-- nav -->
+    </div>
+  </header>
+  <!-- header -->
+  <!-- main -->
+
+
+  <main class="container" role="main-inner-wrapper">
+    <!-- work details -->
+    <img alt="" class="img-responsive" src="images/illustration-images/image-4.jpg">
+
+    <div class="work-details">
+    <div class="row">
+      <div class="col-xs-12 col-sm-12 col-md-4">
+        <header role="work-title">
+          <h2>Digital Illustration</h2>
+        </header>
+      </div>
+
+
+      <div class="col-xs-12 col-sm-12 col-md-8">
+        <section>
+          <p>Some clients need a unique visualization of their massage. It is true that the internet offers almost endless amount of different illustrations for sale and download online, however, sometimes none of them is what the client is looking for. It could be a special colour palette of an icon that lines with the client's brand identity or an illustration that visualizes client's message in the most effective way. Below are some samples of brochures, book cover, labels and wedding invitation where I had an opportunity to create original illustrations.</p>
+
+
+          <p><strong>Role</strong><br>
+          Digital Illustration, Branding, Identity, Web Design</p>
+        </section>
+      </div>
+    </div>
+    <img alt="" class="img-responsive" src="images/illustration-images/image-2.jpg">
+    <img alt="" class="img-responsive" src="images/illustration-images/image-8.jpg">
+    <img alt="" class="img-responsive" src="images/illustration-images/image-3.jpg">
+    <img alt="" class="img-responsive" src="images/illustration-images/image-6.jpg">
+    <img alt="" class="img-responsive" src="images/illustration-images/image-5.jpg">
+    <img alt="" class="img-responsive" src="images/illustration-images/image-7.jpg">
+  </div>
+    <!-- work details -->
+  </main>
+  <!-- main -->
+  <!-- footer -->
+
+
+  <footer role="footer">
+    <!-- logo -->
+
+
+    <h1><a href="index.html" title="AV Design logo"><img alt="AV Design logo" src="images/logo.png"></a>
+    </h1>
+    <!-- logo -->
+    <!-- nav -->
+
+
+    <nav role="footer-nav">
+      <ul>
+        <li><a href="index.html" title="Portfolio">Portfolio</a>
+        </li>
+
+
+        <li><a href="about.html" title="About">About</a>
+        </li>
+
+
+        <li><a href="contact.html" title="Contact">Contact</a>
+        </li>
+      </ul>
+    </nav>
+    <!-- nav -->
+
+
+    <p class="copy-right">&copy; 2019 AV Design website. All rights Reserved</p>
+  </footer>
+  <!-- footer -->
+  <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+  <script src="js/jquery.min.js" type="text/javascript">
+  </script> <!-- custom -->
+
+  <script src="js/nav.js" type="text/javascript">
+  </script>
+  <script src="js/custom.js" type="text/javascript">
+  </script> <!-- Include all compiled plugins (below), or include individual files as needed -->
+
+  <script src="js/bootstrap.min.js" type="text/javascript">
+  </script>
+  <script src="js/effects/masonry.pkgd.min.js" type="text/javascript">
+  </script>
+  <script src="js/effects/imagesloaded.js" type="text/javascript">
+  </script>
+  <script src="js/effects/classie.js" type="text/javascript">
+  </script>
+  <script src="js/effects/AnimOnScroll.js" type="text/javascript">
+  </script>
+  <script src="js/effects/modernizr.custom.js">
+  </script> <!-- jquery.countdown -->
+
+  <script src="js/html5shiv.js" type="text/javascript">
+  </script>
+</body>
 </html>
