--- a/index.html
+++ b/index.html
@@ -84,6 +84,17 @@
             </header>
 
         <!-- header -->
+        <section class="bgimage">
+  <!-- <div class="container-fluid">
+    <div class="row">
+      <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+        <h5>Hello, world! Full width Hero-unit header</h5>
+        <p>This is a template for a simple marketing or informational website. It includes a large callout called the hero unit and three supporting pieces of content. Use it as a starting point to create something more unique.</p>
+        <p><a href="#" class="btn btn-primary btn-large">Learn more »</a></p>
+      </div>
+    </div>
+  </div> -->
+</section>
 
         <!-- main -->
 
@@ -281,7 +292,7 @@
 
           <!-- nav -->
 
-          <p class="copy-right">&copy; 2018 AV Design website All rights Reserved</p>
+          <p class="copy-right">&copy; 2019 AV Design website. All rights Reserved</p>
 
       </footer>
 
