--- a/print.html
+++ b/print.html
@@ -1,246 +1,149 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 
- <html>
+<html>
+<head>
+  <meta content="width=device-width, initial-scale=1, maximum-scale=1" name="viewport">
+  <meta charset="utf-8"><!-- Description, Keywords and Author -->
+  <meta content="" name="description">
+  <meta content="" name="author">
 
-    <head>
+  <title>::AV Design website:: | Print It On ::</title>
+  <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon"><!-- style -->
+  <link href="css/style.css" rel="stylesheet" type="text/css"><!-- style -->
+  <!-- bootstrap -->
+  <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css"><!-- responsive -->
+  <link href="css/responsive.css" rel="stylesheet" type="text/css"><!-- font-awesome -->
+  <link href="css/fonts.css" rel="stylesheet" type="text/css">
+  <link href="css/font-awesome.min.css" rel="stylesheet" type="text/css"><!-- font-awesome -->
+  <link href="css/effects/set2.css" rel="stylesheet" type="text/css">
+  <link href="css/effects/normalize.css" rel="stylesheet" type="text/css">
+  <link href="css/effects/component.css" rel="stylesheet" type="text/css">
+</head>
 
-    	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+<body>
+  <!-- header -->
 
-        <meta charset="utf-8">
 
-        <!-- Description, Keywords and Author -->
+  <header role="header">
+    <div class="container">
+      <!-- logo -->
 
-        <meta name="description" content="">
 
-        <meta name="author" content="">
+      <h1><a href="index.html" title="AV Design logo"><img alt="AV Design logo" src="images/logo.png"></a>
+      </h1>
+      <!-- logo -->
+      <!-- nav -->
 
 
+      <nav class="navy" role="header-nav">
+        <ul>
+          <li class="nav-active"><a href="index.html" title="Portfolio">Portfolio</a>
+          </li>
 
-        <title>::AV Design website:: | Print It On ::</title>
 
-		<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+          <li><a href="about.html" title="About">About</a>
+          </li>
 
 
+          <li><a href="contact.html" title="Contact">Contact</a>
+          </li>
+        </ul>
+      </nav>
+      <!-- nav -->
+    </div>
+  </header>
+  <!-- header -->
+  <!-- main -->
 
-        <!-- style -->
 
-        <link href="css/style.css" rel="stylesheet" type="text/css">
+  <main class="container" role="main-inner-wrapper">
+    <!-- work details -->
+    <img alt="" class="img-responsive" src="images/printiton-images/Capture3.JPG">
 
-        <!-- style -->
+    <div class="work-details">
+    <div class="row">
+      <div class="col-xs-12 col-sm-12 col-md-4">
+        <header role="work-title">
+          <h2>Website Redesign</h2>
+        </header>
+      </div>
 
-        <!-- bootstrap -->
 
-        <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
+      <div class="col-xs-12 col-sm-12 col-md-8">
+        <section>
+          <p><strong>THE CLIENT</strong><br>
+          <a class="link" href="http://www.printiton.ca/">Print It On</a> is a well established print shop in Winnipeg that offers a large selection of print services, including prints of various sizes, bindery, finishing and graphic design services.</p>
 
-        <!-- responsive -->
 
-        <link href="css/responsive.css" rel="stylesheet" type="text/css">
+          <p><strong>THE MISSION</strong><br>
+          After the business was sold to the new owners they decided to refresh their identity and make it consistent through all their marketing tools, starting from marketing materials to a new website. At the same time I was hired to help the new owners to accomplish this mission.</p>
 
-        <!-- font-awesome -->
 
-        <link href="css/fonts.css" rel="stylesheet" type="text/css">
+          <p><strong>MY ROLE</strong><br>
+          Graphic Design, Web Design, UX / UI</p>
+        </section>
+      </div>
+    </div>
+    <img alt="" class="img-responsive" src="images/printiton-images/image-3.JPG"> <img alt="" class="img-responsive" src="images/printiton-images/image-2.JPG"></div>
+    <!-- work details -->
+  </main>
+  <!-- main -->
+  <!-- footer -->
 
-        <link href="css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
-        <!-- font-awesome -->
+  <footer role="footer">
+    <!-- logo -->
 
-        <link href="css/effects/set2.css" rel="stylesheet" type="text/css">
 
-        <link href="css/effects/normalize.css" rel="stylesheet" type="text/css">
-
-        <link href="css/effects/component.css"  rel="stylesheet" type="text/css" >
-
-	</head>
-
-
-
-    <body>
-
-
-
-    	<!-- header -->
-
-        	<header role="header">
-
-            	<div class="container">
-
-                	<!-- logo -->
-
-                    	<h1>
-
-                        <a href="index.html" title="AV Design logo"><img src="images/logo.png" alt="AV Design logo"/></a>
-
-                        </h1>
-
-                    <!-- logo -->
-
-                    <!-- nav -->
-
-                    <nav role="header-nav" class="navy">
-
-                        <ul>
-
-                            <li class="nav-active"><a href="index.html" title="Portfolio">Portfolio</a></li>
-
-                            <li><a href="about.html" title="About">About</a></li>
-
-                            <li><a href="contact.html" title="Contact">Contact</a></li>
-
-                        </ul>
-
-                    </nav>
-
-                    <!-- nav -->
-
-                </div>
-
-            </header>
-
-        <!-- header -->
-
-        <!-- main -->
-
-        <main role="main-inner-wrapper" class="container">
-
-
-
-
-
-
-
-
-                          <!-- work details -->
-
-<img src="images\printiton-images\Capture3.JPG" alt="" class="img-responsive"/>
-<div class="work-details">
-
-
-
-                                  <div class="row">
-
-                                    <div class="col-xs-12 col-sm-12 col-md-4">
-
-                                        <header role="work-title">
-
-                                            <h2>Website Redesign</h2>
-
-                                          </header>
-
-                                      </div>
-
-                                      <div class="col-xs-12 col-sm-12 col-md-8">
-
-                                        <section>
-
-                                          <p><strong>THE CLIENT</strong><br/>
-
-                                            <a class="link" href="http://www.printiton.ca/">Print It On</a> is a well established print shop in Winnipeg that offers a large selection of print services,
-                                                                          including prints of various sizes, bindery, finishing and graphic design services.</p>
-
-                      <p><strong>THE MISSION</strong><br/>
-
-                        After the business was sold to the new owners they decided to refresh their identity and make it consistent
-                        through all their marketing tools, starting from marketing materials to a new website.
-                        At the same time I was hired to help the new owners to accomplish this mission.</p>
-
-
-                                              <p><strong>MY ROLE</strong><br/>
-
-                            Graphic Design, Web Design, UX / UI</p>
-
-                                          </section>
-
-
-
-                                      </div>
-
-                                  </div>
-
-                                  <img src="images\printiton-images\image-3.JPG" alt="" class="img-responsive"/>
-                                  <img src="images\printiton-images\image-2.JPG" alt="" class="img-responsive"/>
-
-                                  </div>
-
-
-                              </div>
-
-                          <!-- work details -->
-
-
-
-
-        </main>
-
-    	<!-- main -->
-
-        <!-- footer -->
-
-        <footer role="footer">
-
-            <!-- logo -->
-
-                <h1>
-
-                  <a href="index.html" title="AV Design logo"><img src="images/logo.png" alt="AV Design logo"/></a>
-
-                </h1>
-
-            <!-- logo -->
-
-            <!-- nav -->
-
-            <nav role="footer-nav">
-
-            	<ul>
-
-                	<li><a href="index.html" title="Portfolio">Portfolio</a></li>
-
-                    <li><a href="about.html" title="About">About</a></li>
-
-                    <li><a href="contact.html" title="Contact">Contact</a></li>
-
-                </ul>
-
-            </nav>
-
-            <!-- nav -->
-
-            <p class="copy-right">&copy; 2018 AV Design website All rights Reserved</p>
-
-        </footer>
-
-        <!-- footer -->
-
-
-
-        <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-
-        <script src="js/jquery.min.js" type="text/javascript"></script>
-
-        <!-- custom -->
-
-		<script src="js/nav.js" type="text/javascript"></script>
-
-        <script src="js/custom.js" type="text/javascript"></script>
-
-        <!-- Include all compiled plugins (below), or include individual files as needed -->
-
-        <script src="js/bootstrap.min.js" type="text/javascript"></script>
-
-        <script src="js/effects/masonry.pkgd.min.js"  type="text/javascript"></script>
-
-		<script src="js/effects/imagesloaded.js"  type="text/javascript"></script>
-
-		<script src="js/effects/classie.js"  type="text/javascript"></script>
-
-		<script src="js/effects/AnimOnScroll.js"  type="text/javascript"></script>
-
-        <script src="js/effects/modernizr.custom.js"></script>
-
-        <!-- jquery.countdown -->
-
-        <script src="js/html5shiv.js" type="text/javascript"></script>
-
-    </body>
-
+    <h1><a href="index.html" title="AV Design logo"><img alt="AV Design logo" src="images/logo.png"></a>
+    </h1>
+    <!-- logo -->
+    <!-- nav -->
+
+
+    <nav role="footer-nav">
+      <ul>
+        <li><a href="index.html" title="Portfolio">Portfolio</a>
+        </li>
+
+
+        <li><a href="about.html" title="About">About</a>
+        </li>
+
+
+        <li><a href="contact.html" title="Contact">Contact</a>
+        </li>
+      </ul>
+    </nav>
+    <!-- nav -->
+
+
+    <p class="copy-right">&copy; 2019 AV Design website. All rights Reserved</p>
+  </footer>
+  <!-- footer -->
+  <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+  <script src="js/jquery.min.js" type="text/javascript">
+  </script> <!-- custom -->
+
+  <script src="js/nav.js" type="text/javascript">
+  </script>
+  <script src="js/custom.js" type="text/javascript">
+  </script> <!-- Include all compiled plugins (below), or include individual files as needed -->
+
+  <script src="js/bootstrap.min.js" type="text/javascript">
+  </script>
+  <script src="js/effects/masonry.pkgd.min.js" type="text/javascript">
+  </script>
+  <script src="js/effects/imagesloaded.js" type="text/javascript">
+  </script>
+  <script src="js/effects/classie.js" type="text/javascript">
+  </script>
+  <script src="js/effects/AnimOnScroll.js" type="text/javascript">
+  </script>
+  <script src="js/effects/modernizr.custom.js">
+  </script> <!-- jquery.countdown -->
+
+  <script src="js/html5shiv.js" type="text/javascript">
+  </script>
+</body>
 </html>
