--- a/print.html
+++ b/print.html
@@ -84,7 +84,9 @@
         </section>
       </div>
     </div>
-    <img alt="" class="img-responsive" src="images/printiton-images/image-3.JPG"> <img alt="" class="img-responsive" src="images/printiton-images/image-2.JPG"></div>
+    <img alt="" class="img-responsive" src="images/printiton-images/image-3.JPG"> 
+    <img alt="" class="img-responsive" src="images/printiton-images/image-2.JPG">
+    </div>
     <!-- work details -->
   </main>
   <!-- main -->
