--- a/print.html
+++ b/print.html
@@ -29,7 +29,9 @@
       <!-- logo -->
 
 
-      <h1><a href="index.html" title="AV Design logo"><img alt="AV Design logo" src="images/logo.png"></a>
+      <h1><a href="index.html" title="AV Design logo">
+        <img alt="AV Design logo" src="images/logo.png">
+      </a>
       </h1>
       <!-- logo -->
       <!-- nav -->
@@ -45,7 +47,8 @@
           </li>
 
 
-          <li><a href="contact.html" title="Contact">Contact</a>
+          <li>
+            <a href="contact.html" title="Contact">Contact</a>
           </li>
         </ul>
       </nav>
@@ -78,15 +81,13 @@
           <p><strong>THE MISSION</strong><br>
           After the business was sold to the new owners they decided to refresh their identity and make it consistent through all their marketing tools, starting from marketing materials to a new website. At the same time I was hired to help the new owners to accomplish this mission.</p>
 
-
           <p><strong>MY ROLE</strong><br>
           Graphic Design, Web Design, UX / UI</p>
         </section>
       </div>
     </div>
-    <img alt="" class="img-responsive" src="images/printiton-images/image-3.JPG"> 
-      <img alt="" class="img-responsive" src="images/printiton-images/image-2.JPG">
-    </div>
+  <img alt="" class="img-responsive" src="images\printiton-images\Capture1.jpg">
+      <img alt="" class="img-responsive" src="images\printiton-images\Capture2.jpg"></div>
     <!-- work details -->
   </main>
   <!-- main -->
@@ -97,7 +98,8 @@
     <!-- logo -->
 
 
-    <h1><a href="index.html" title="AV Design logo"><img alt="AV Design logo" src="images/logo.png"></a>
+    <h1><a href="index.html" title="AV Design logo">
+      <img alt="AV Design logo" src="images/logo.png"></a>
     </h1>
     <!-- logo -->
     <!-- nav -->
