--- a/about.html
+++ b/about.html
@@ -61,10 +61,10 @@
           </h2>
 
 
-          <p>Alina is a web and graphic designer with more than five years experience. She possesses a certificate in HTML5, CSS3 and Responsive Design for Web Development and obtained a B.A. in Visual Communications.</p>
+          <p>Alina is a web and graphic designer with more than seven years experience. She possesses a certificate in HTML5, CSS3 and Responsive Design for Web Development and obtained a B.A. in Visual Communications.</p>
 
 
-          <p>In addition, Alina had the opportunity to learn product photography, photo editing and illustration, so she is capable of creating any unique visual the client needs.</p>
+          <p>In addition, Alina had the opportunity to learn product photography, photo editing and illustration.</p>
 
 
           <p>Alina is an expert in translating client's needs into effective and eye catching design.</p>
@@ -255,7 +255,7 @@
     <!-- nav -->
 
 
-    <p class="copy-right">&copy; 2019 AV Design website. All rights Reserved</p>
+    <p class="copy-right">&copy; 2021 AV Design website. All rights Reserved</p>
   </footer>
   <!-- footer -->
   <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
